--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <div class="wrapper">
         <h1 class="budget-info"></h1>
         <div class="table-wrapper">
+            <div class="title-wrapper">
+                <h2 class="income-title">Przychody</h2>
+                <h2 class="expenses-title">Wydatki</h2>
+            </div>
             <div class="income">
-                <div class="title-wrapper t1">
-                    <h2 class="income-title">Przychody</h2>
-                    <h2 class="expenses-title-mobile">Wydatki</h2>
-                </div>
                 <form action="#">
                     <input type="text" class="input-name" placeholder="Nazwa przychodu">
-                    <input type="text" class="input-price" placeholder="Kwota">
+                    <input type="number" class="input-price" placeholder="Kwota">
                     <input type="button" class="input-button" value="Dodaj">
                 </form>
                 <hr>
@@ -39,13 +39,9 @@
                 <p>Suma przychodów: x</p>
             </div>
             <div class="expenses">
-                <div class="title-wrapper t2">
-                    <h2 class="income-title-mobile">Przychody</h2>
-                    <h2 class="expenses-title">Wydatki</h2>    
-                </div>
                 <form action="#">
                     <input type="text" class="input-name" placeholder="Nazwa wydatku">
-                    <input type="text" class="input-price" placeholder="Kwota">
+                    <input type="number" class="input-price" placeholder="Kwota">
                     <input type="button" class="input-button" value="Dodaj">
                 </form>
                 <hr>
@@ -56,11 +52,11 @@
                         <button class="delete-button">Usuń</button>    
                     </div>
                 </div>
-                
                 <hr>
                 <p>Suma wydatków: x</p>
             </div>
         </div>
     </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
