Adding records function working properly

--- a/index.html
+++ b/index.html
@@ -21,37 +21,19 @@
                 <h2 class="income-title">Przychody</h2>
                 <h2 class="expenses-title">Wydatki</h2>
             </div>
-            <div class="income">
-                <form action="#">
+            <form action="#" class="add-form">
                     <input type="text" class="input-name" placeholder="Nazwa przychodu">
-                    <input type="number" class="input-price" placeholder="Kwota">
+                    <input type="number" class="input-value" placeholder="Kwota">
                     <input type="button" class="input-button" value="Dodaj">
-                </form>
-                <hr>
-                <div class="added-to-list">
-                    <p>Pensja - 3000zł</p>
-                    <div class="edit-delete-wrapper">
-                        <button class="edit-button">Edytuj</button>
-                        <button class="delete-button">Usuń</button>    
-                    </div>
-                </div>
+            </form>
+            <hr>
+            <div class="income">
+                <div class="add-income-wrapper"></div>
                 <hr>
                 <p>Suma przychodów: x</p>
             </div>
             <div class="expenses">
-                <form action="#">
-                    <input type="text" class="input-name" placeholder="Nazwa wydatku">
-                    <input type="number" class="input-price" placeholder="Kwota">
-                    <input type="button" class="input-button" value="Dodaj">
-                </form>
-                <hr>
-                <div class="added-to-list">
-                    <p>Rachunki - 3000zł</p>
-                    <div class="edit-delete-wrapper">
-                        <button class="edit-button">Edytuj</button>
-                        <button class="delete-button">Usuń</button>    
-                    </div>
-                </div>
+                <div class="add-expenses-wrapper"></div>
                 <hr>
                 <p>Suma wydatków: x</p>
             </div>
