Editing and deleting functions working properly. Sum of income and sum of expenses displays proper values

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <div class="income">
                 <div class="add-income-wrapper"></div>
                 <hr>
-                <p>Suma przychodów: x</p>
+                <p>Suma przychodów: <span id="inc"></span></p>
             </div>
             <div class="expenses">
                 <div class="add-expenses-wrapper"></div>
                 <hr>
-                <p>Suma wydatków: x</p>
+                <p>Suma wydatków: <span id="exp"><span></p>
             </div>
         </div>
     </div>
