App working mostly properly. Few minor fixes needed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#" class="logo">SaveApp</a>
     </header>
     <div class="wrapper">
-        <h1 class="budget-info"></h1>
+        <p class="budget-info"></p>
         <div class="table-wrapper">
             <div class="title-wrapper">
                 <h2 class="income-title">Przychody</h2>
