--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
         </div>
     </div>
     <script src="./js/main.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
